<resources>
    <string name="app_name">RideshareCapstone</string>
    <string name="loginBtn">Login</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="rideShareLogo">RideShareLogo</string>
    <string name="PTCLogo">PTC</string>
    <string name="formSub">FORM SUBMITTED!</string>
    <string name="submittedTxt">submitted</string>
    <string name="linesTop">Lines</string>
    <string name="linesBottom">lines</string>
    <string name="ptcLogoTxt">ptcLogo</string>
    <string name="rideshare_is_a_resource_for_ptc_students_to_find_or_provide_rides_for_their_friends_and_classmates_to_and_from_the_school">RideShare is a resource for PTC students to find or provide rides for their friends and classmates to and from the school.</string>
    <string name="thank_you_for_signing_up_for_the_ptc_rideshare_program_check_your_ptc_email_and_click_the_link_to_finish_creating_your_account">Thank you for signing up for the PTC Rideshare program! Check your PTC email and click the link to finish creating your account!</string>
    <string name="loginTxt">LOGIN</string>
    <string name="LoginPageBtn">LOGIN</string>
    <string name="emailInput">email</string>
    <string name="passwordInput">password</string>
    <string name="PTCEmailTxt">PTC Email</string>
    <string name="PasswordTxt">Password</string>
    <string name="emailHint">email</string>
    <string name="passwordHint">password</string>
    <string name="profileTxt">Profile</string>
    <string name="rideTxt">NEED A RIDE</string>
    <string name="accountTxt">CREATE AN ACCOUNT</string>
    <string name="subBTN">SUBMIT</string>
    <string name="rideBtn">NEED A RIDE?</string>
    <string name="dateTxt">Date Needed</string>
    <string name="timeTxt">Time Needed</string>
    <string name="pickupTxt">Pickup Location</string>
    <string name="DestinationTxt">Destination</string>
    <string name="dateHint">xx/xx/xxxx</string>
    <string name="timeHint">time</string>
    <string name="pickupHint">location</string>
    <string name="destinationHint">location</string>
    <string name="dateInput">date</string>
    <string name="timeInput">time</string>
    <string name="pickupInput">pickup</string>
    <string name="destinationInput">destination</string>
    <string name="editBtn">Edit</string>
    <string name="nameTxt">Name</string>
    <string name="emailTxt">Email</string>
    <string name="addressTxt">Address</string>
    <string name="Smokingtxt">Smoking Preferences:</string>
    <string name="historyTxt">History</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="address">address</string>
    <string name="smoking">smoking</string>
    <string name="history">history</string>
    <string name="profileIcon">profileIcon</string>
    <string name="fNameTxt">First Name</string>
    <string name="lNameTxt">Last Name</string>
    <string name="fNameInput">fName</string>
    <string name="lNameInout">lName</string>
    <string name="lNameHint">Last Name</string>
    <string name="fNameHint">First Name</string>
    <string name="AddressAcc">Address</string>
    <string name="AddressLine1">Address Line 1</string>
    <string name="AddressLine2">Address Line 2</string>
    <string name="AddressAccHint">Address</string>
    <string name="PTCemailHint">Email</string>
    <string name="cityTxt">City</string>
    <string name="stateTxt">State</string>
    <string name="zipTxt">Zip</string>
    <string name="cityHint">City</string>
    <string name="stateHint">State</string>
    <string name="passAcc">Password</string>
    <string name="passConfAcc">Confirm Password</string>
    <string name="passAccHint">Password</string>
    <string name="passConfAccHint">Password</string>
    <string name="willYouTxt">Will You:</string>
    <string name="eatPrefTxt">Eating Preference:</string>
    <string name="smokPrefTxt">Smoking Preference:</string>
    <string name="giveRB">Give a Ride</string>
    <string name="needRB">Need a Ride</string>
    <string name="eatRB">I eat in the car</string>
    <string name="noEatRB">I don\'t eat in the car</string>
    <string name="noPrefRB">No Preference</string>
    <string name="smokRB">I smoke in the car</string>
    <string name="noSmokRB">No smoking in the car</string>
    <string name="dontSmokRB">I don\'t smoke</string>
    <string name="submitBtn">Submit</string>
    <string name="selectDate">Select Date</string>
    <string name="selectTime">Select Time</string>
    <string name="title_activity_request_complete">RequestComplete</string>
    <string name="returnToProfileBtnTxt">Return to profile</string>
    <string name="requestComplete">Your ride request is complete!</string>
</resources>