<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RideRequestComplete">

    <ImageView
        android:id="@+id/linesTop2"
        android:layout_width="341dp"
        android:layout_height="70dp"
        android:contentDescription="@string/linesTop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.004"
        app:srcCompat="@drawable/lines" />

    <ImageView
        android:id="@+id/ptcLogoTxt2"
        android:layout_width="319dp"
        android:layout_height="50dp"
        android:contentDescription="@string/ptcLogoTxt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135"
        app:srcCompat="@drawable/ptclogo" />

    <ImageView
        android:id="@+id/linesBottom2"
        android:layout_width="341dp"
        android:layout_height="70dp"
        android:contentDescription="@string/linesBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/linesbottom" />

    <ImageView
        android:id="@+id/rideShareLogo2"
        android:layout_width="413dp"
        android:layout_height="110dp"
        android:contentDescription="@string/rideShareLogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217"
        app:srcCompat="@drawable/ridesharelogo" />

    <TextView
        android:id="@+id/reqCompleteTXT"
        android:layout_width="334dp"
        android:layout_height="104dp"
        android:text="@string/requestComplete"
        android:textAlignment="center"
        android:textColor="#000C4E"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/returnToProfileBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#CDDC39"
        android:text="@string/returnToProfileBtnTxt"
        android:textColor="#000D53"
        app:iconTint="#F8F8F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />
</androidx.constraintlayout.widget.ConstraintLayout>